reports/dist/run-full-bench-20260609-085346/gateway-api-contour-gateway-api-response-header-modifier/artifacts/manifests/gatewayclasses.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"GatewayClass","metadata":{"annotations":{},"name":"contour"},"spec":{"controllerName":"projectcontour.io/gateway-controller"}}
    creationTimestamp: "2026-06-09T13:25:14Z"
    generation: 1
    name: contour
    resourceVersion: "590"
    uid: b8711a58-1dc2-454c-9ea8-b0eb6eec9347
  spec:
    controllerName: projectcontour.io/gateway-controller
  status:
    conditions:
    - lastTransitionTime: "2026-06-09T13:25:14Z"
      message: GatewayClass has been accepted by the controller
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-09T13:25:14Z"
      message: Gateway API CRD bundle version v1.3.0 is supported.
      observedGeneration: 1
      reason: SupportedVersion
      status: "True"
      type: SupportedVersion
kind: List
metadata:
  resourceVersion: ""
