reports/dist/run-full-bench-20260609-085346/gateway-api-contour-gateway-api-response-header-modifier/artifacts/manifests/httproutes.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"HTTPRoute","metadata":{"annotations":{},"name":"sample-route","namespace":"sample"},"spec":{"parentRefs":[{"name":"sample-gw","sectionName":"http"}],"rules":[{"backendRefs":[{"name":"sample","port":80}],"filters":[{"responseHeaderModifier":{"set":[{"name":"X-Powered-By","value":"chart-test-swarm"}]},"type":"ResponseHeaderModifier"}],"matches":[{"path":{"type":"PathPrefix","value":"/"}}]}]}}
    creationTimestamp: "2026-06-09T13:25:14Z"
    generation: 1
    name: sample-route
    namespace: sample
    resourceVersion: "656"
    uid: cc2ec0d0-f85b-4b2a-ab95-22705d2ed7d7
  spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sample-gw
      sectionName: http
    rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: sample
        port: 80
        weight: 1
      filters:
      - responseHeaderModifier:
          set:
          - name: X-Powered-By
            value: chart-test-swarm
        type: ResponseHeaderModifier
      matches:
      - path:
          type: PathPrefix
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: "2026-06-09T13:25:16Z"
        message: References resolved
        observedGeneration: 1
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: "2026-06-09T13:25:16Z"
        message: Accepted HTTPRoute
        observedGeneration: 1
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: projectcontour.io/gateway-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: sample-gw
        sectionName: http
kind: List
metadata:
  resourceVersion: ""
