reports/dist/run-full-bench-20260609-085346/gateway-api-contour-gateway-api-response-header-modifier/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-06-09T13:25:15Z"
    labels:
      gateway.networking.k8s.io/gateway-name: sample-gw
      projectcontour.io/owning-gateway-name: sample-gw
    name: contour-sample-gw
    namespace: sample
    resourceVersion: "630"
    uid: 36f5dd02-e50a-4aec-bd3c-0ad41e0242c7
  spec:
    clusterIP: 10.96.166.87
    clusterIPs:
    - 10.96.166.87
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: xds
      port: 8001
      protocol: TCP
      targetPort: 8001
    selector:
      app: contour-sample-gw
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-06-09T13:25:15Z"
    labels:
      gateway.networking.k8s.io/gateway-name: sample-gw
      projectcontour.io/owning-gateway-name: sample-gw
    name: envoy-sample-gw
    namespace: sample
    resourceVersion: "636"
    uid: afc9e93d-f16c-4beb-9b0c-62300f58c5f1
  spec:
    allocateLoadBalancerNodePorts: true
    clusterIP: 10.96.175.231
    clusterIPs:
    - 10.96.175.231
    externalTrafficPolicy: Local
    healthCheckNodePort: 30128
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-80
      nodePort: 30868
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: envoy-sample-gw
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-09T13:25:08Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "536"
    uid: fbb1abc7-ea93-4893-8aee-536422add4bb
  spec:
    clusterIP: 10.96.240.190
    clusterIPs:
    - 10.96.240.190
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
